<resources>
    <string name="app_name">TMBDApp</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="guest">Guest</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top rated</string>
    <string name="watch_list">Watch list</string>
    <string name="favorite">Favorite</string>
    <string name="exit">Exit</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="total_edits">Total edits</string>
    <string name="total_ratings">Total ratings</string>
    <string name="rating_review">Rating review</string>
    <string name="films">Films</string>
    <string name="authentication">Authentication</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="user">About user</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="warning">Warning!!!</string>
    <string name="message">To change the settings you need to restart the application</string>
    <string name="main_activity_toast">You enter as a Guest</string>
    <string name="auth_text">Enter username and password</string>
    <string name="similar_films">Similar movies:</string>
    <string name="facts">Facts:</string>
    <string name="originalTitle">Original title:</string>
    <string name="originalLanguage">Original language:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="homepage">Homepage:</string>
    <string name="rating_movie">Last rated movies:</string>
</resources>