<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facts"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/originalTitle"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/originalTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/originalLanguage"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/originalLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/revenue"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/revenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homepage"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/homePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:textColor="@color/textColor"
        android:textSize="16sp" />
</LinearLayout>