<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/signIn"
            style="@style/MainActivityButton"
            android:background="@drawable/white_button_background"
            android:text="@string/sign_in"/>

        <Button
            android:id="@+id/signUp"
            style="@style/MainActivityButton"
            android:background="@drawable/white_button_background"
            android:text="@string/sign_up"/>

        <Button
            android:id="@+id/guest"
            style="@style/MainActivityButton"
            android:background="@drawable/blue_button_background"
            android:text="@string/guest"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>