<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".view.RatingActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="100dp"
        android:src="@drawable/blue_button_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<LinearLayout
    android:layout_marginTop="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:drawableStartCompat="@drawable/ic_baseline_create_24"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/avatar"
    android:orientation="vertical">
    <TextView
        android:id="@+id/totalEdits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_edits"
        app:drawableStartCompat="@drawable/ic_baseline_create_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:drawableTint="@color/light_blue" />

    <TextView
        android:id="@+id/totalRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_ratings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalEdits"
        app:drawableStartCompat="@drawable/ic_baseline_thumb_up_24"
        app:drawableTint="@color/light_blue" />

    <TextView
        android:id="@+id/ratingReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_review"
        app:drawableStartCompat="@drawable/ic_baseline_show_chart_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalRatings"
        app:drawableTint="@color/light_blue" />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>