<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".view.AccountActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="100dp"
        android:src="@drawable/blue_button_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:drawableStartCompat="@drawable/ic_baseline_create_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_account_circle_24"
            app:drawableTint="@color/light_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar" />

        <TextView
            android:id="@+id/totalEdits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_edits"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_baseline_create_24"
            app:drawableTint="@color/light_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userName" />

        <TextView
            android:id="@+id/totalRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_ratings"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_baseline_thumb_up_24"
            app:drawableTint="@color/light_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalEdits" />

        <TextView
            android:id="@+id/ratingReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_review"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_baseline_show_chart_24"
            app:drawableTint="@color/light_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalRatings" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/rating_movie"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/liner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posterRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>